--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,10 +5,10 @@
 
 .menu {
     /*list-style: none;*/
-    width: 15%;
+    width: 20%;
     background-color: rgb(192, 192, 192);
-    padding-left: 1px;
-    padding-right: 2px;
+    padding-top: 5px;
+
 }
 
 ul {
@@ -18,7 +18,7 @@ ul {
 
 li {
     background-color: rgb(255, 255, 255);
-    margin-top: 1px;
+    margin-top: 1.5px;
     margin-right: 1px;
 }
 
@@ -36,8 +36,8 @@ li {
 
 
 .main-user img {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     margin-right: 10px;
 }
 
@@ -62,16 +62,16 @@ li {
 /* User List */
 .user-list {
     padding: 8px;
-    padding-left: 20px;
-    
+    padding-left: 15px;
+
     display: flex;
     justify-contxent: space-around;
     align-items: center;
 }
 
 .user-list img {
-    width: 60px;
-    height: 60px;
+    width: 75px;
+    height: 75px;
     margin-right: 10px;
 }
 
@@ -86,7 +86,7 @@ li {
     align-items: center;
     text-align: center;
     background-color: #dadada;
-    width: 85%;
+    width: 80%;
 
 }
 
